--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,34 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+
+
+.dots {
+   width: 56px;
+   height: 26.9px;
+   background: radial-gradient(circle closest-side,#ee141f 90%,#0000) 0%   50%,
+          radial-gradient(circle closest-side,#ee141f 90%,#0000) 50%  50%,
+          radial-gradient(circle closest-side,#ee141f 90%,#0000) 100% 50%;
+   background-size: calc(100%/3) 13.4px;
+   background-repeat: no-repeat;
+   animation: dots-7ar3yq 0.8s infinite linear;
+}
+
+@keyframes dots-7ar3yq {
+   20% {
+      background-position: 0%   0%, 50%  50%,100%  50%;
+   }
+
+   40% {
+      background-position: 0% 100%, 50%   0%,100%  50%;
+   }
+
+   60% {
+      background-position: 0%  50%, 50% 100%,100%   0%;
+   }
+
+   80% {
+      background-position: 0%  50%, 50%  50%,100% 100%;
+   }
+}
+
 
 
 .poppins-400{
